--- a/public/index.html
+++ b/public/index.html
@@ -63,8 +63,45 @@
           <h1>Sweet Texas Roast Bowl</h1>
           <img src="https://assets.hellofresh.com/us/cms/plans/VeggieJumble-Recipe-700x700.png" alt="" class="food-plate">
         </div>
-
-      </section>
+    </section>
+    <section id="information">
+      <div class="restaurant-image">
+        <img src="img/top-down.jpg" alt="">
+      </div>
+      <div class="info">
+        <h2>Established 1940</h2>
+        <div class="paragraphs">
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique, harum consequuntur! Error nisi aut amet officia sed nam quia inventore possimus. Architecto beatae, obcaecati perferendis quis sunt consectetur repudiandae voluptate atque excepturi. Dolorum, odio officia adipisci ad voluptatibus error dolor?</p>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique, harum consequuntur! Error nisi aut amet officia sed nam quia inventore possimus. Architecto beatae, obcaecati perferendis quis sunt consectetur repudiandae voluptate atque excepturi. Dolorum, odio officia adipisci ad voluptatibus error dolor?</p>
+        </div>
+        <a href="#" class="about-link">
+          <span> Learn more about our restaurant </span>
+          <div href="#" class="circle-right">  
+            <i class="fas fa-chevron-right">
+          </i></div>
+        </div>
+      </a>
+    </section>
+    <section id="food-preview">
+      <h2>Whole food ingredients</h2>
+      <div class="button-rounded">View Our Menu</div>
+      <div class="food-slider">
+        <div class="slide">
+          <div class="background"></div>
+          <div class="content">
+            <div class="food-title">
+              Starters
+            </div>
+            <p class="food-description">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam expedita ipsam libero tempora velit nisi suscipit. Corporis debitis nemo aut cum, numquam repellat asperiores alias, sapiente, molestias et vero eos!
+            </p>
+            <div class="food-image">
+              <img src="https://www.buffalowildwings.com/globalassets/menuitems/10120021-buffalo-chips.png?format=png&width=600&v=2" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- <script src="/public/js/dist/FirstComp.js"></script>
     <script src="/public/js/dist/vendors~FirstComp.js"></script>
     <script src="/public/js/dist/main.js.js"></script> -->
