page complete. Still need to finish slider. Learn PHP and Larvel before continuing

--- a/public/index.html
+++ b/public/index.html
@@ -83,25 +83,122 @@
       </a>
     </section>
     <section id="food-preview">
-      <h2>Whole food ingredients</h2>
+      <h2>Whole food ingredients in our cuisines</h2>
       <div class="button-rounded">View Our Menu</div>
-      <div class="food-slider">
-        <div class="slide">
-          <div class="background"></div>
-          <div class="content">
-            <div class="food-title">
-              Starters
-            </div>
-            <p class="food-description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam expedita ipsam libero tempora velit nisi suscipit. Corporis debitis nemo aut cum, numquam repellat asperiores alias, sapiente, molestias et vero eos!
-            </p>
-            <div class="food-image">
-              <img src="https://www.buffalowildwings.com/globalassets/menuitems/10120021-buffalo-chips.png?format=png&width=600&v=2" alt="">
-            </div>
-          </div>
+      <di class="container">
+        <div class="left-btn">
+          <i class="fas fa-chevron-left" aria-hidden="true">
+          </i>
         </div>
+        <div class="right-btn">
+          <i class="fas fa-chevron-right" aria-hidden="true">
+          </i>
+        </div>
+        <div class="food-slider">
+          <div class="sliding-system">
+            <div class="slide">
+              <div class="background"></div>
+              <div class="content">
+                <div class="food-title">
+                  Starters
+                </div>
+                <p class="food-description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam expedita ipsam libero tempora velit nisi suscipit. Corporis debitis nemo aut cum, numquam repellat asperiores alias, sapiente, molestias et vero eos!
+                </p>
+                <div class="food-image">
+                  <img src="https://i.ya-webdesign.com/images/salsa-and-chips-png-4.png" alt="">
+                </div>
+              </div>
+            </div>
+            <div class="slide">
+              <div class="background"></div>
+              <div class="content">
+                <div class="food-title">
+                  Breakfast
+                </div>
+                <p class="food-description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam expedita ipsam libero tempora velit nisi suscipit. Corporis debitis nemo aut cum, numquam repellat asperiores alias, sapiente, molestias et vero eos!
+                </p>
+                <div class="food-image">
+                  <img src="https://i.ya-webdesign.com/images/waffles-transparent-crispy-chicken-1.png" alt="">
+                </div>
+              </div>
+            </div>
+            <div class="slide">
+              <div class="background"></div>
+              <div class="content">
+                <div class="food-title">
+                  Lunch
+                </div>
+                <p class="food-description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam expedita ipsam libero tempora velit nisi suscipit. Corporis debitis nemo aut cum, numquam repellat asperiores alias, sapiente, molestias et vero eos!
+                </p>
+                <div class="food-image">
+                  <img src="https://i.ya-webdesign.com/images/blt-baguette-png-5.png" alt="">
+                </div>
+              </div>
+            </div>
+            <div class="slide">
+              <div class="background"></div>
+              <div class="content">
+                <div class="food-title">
+                  Dinner
+                </div>
+                <p class="food-description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam expedita ipsam libero tempora velit nisi suscipit. Corporis debitis nemo aut cum, numquam repellat asperiores alias, sapiente, molestias et vero eos!
+                </p>
+                <div class="food-image">
+                  <img src="https://webstockreview.net/images/pasta-clipart-transparent-background-1.png" alt="">
+                </div>
+              </div>
+            </div>
+            <div class="slide">
+              <div class="background"></div>
+              <div class="content">
+                <div class="food-title">
+                  Desserts
+                </div>
+                <p class="food-description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam expedita ipsam libero tempora velit nisi suscipit. Corporis debitis nemo aut cum, numquam repellat asperiores alias, sapiente, molestias et vero eos!
+                </p>
+                <div class="food-image">
+                  <img src="https://www.nicepng.com/png/full/106-1064558_food-dessert-png.png" alt="">
+                </div>
+              </div>
+            </div>
+            <div class="slide">
+              <div class="background"></div>
+              <div class="content">
+                <div class="food-title">
+                  Drinks
+                </div>
+                <p class="food-description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam expedita ipsam libero tempora velit nisi suscipit. Corporis debitis nemo aut cum, numquam repellat asperiores alias, sapiente, molestias et vero eos!
+                </p>
+                <div class="food-image">
+                  <img src="https://www.nicepng.com/png/full/106-1064558_food-dessert-png.png" alt="">
+                </div>
+              </div>
+            </div>
+            <div class="slide">
+              <div class="background"></div>
+              <div class="content">
+                <div class="food-title">
+                  Wine
+                </div>
+                <p class="food-description">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam expedita ipsam libero tempora velit nisi suscipit. Corporis debitis nemo aut cum, numquam repellat asperiores alias, sapiente, molestias et vero eos!
+                </p>
+                <div class="food-image">
+                  <img src="https://www.nicepng.com/png/full/106-1064558_food-dessert-png.png" alt="">
+                </div>
+              </div>
+            </div>`
+          </div>
+        </div>       
       </div>
     </section>
+
     <!-- <script src="/public/js/dist/FirstComp.js"></script>
     <script src="/public/js/dist/vendors~FirstComp.js"></script>
     <script src="/public/js/dist/main.js.js"></script> -->
